--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@
 //*galeria
 @import 'components/galeria/hero';
 @import 'components/galeria/products';
+@import 'components/galeria/catalog';
 
 
 *{
