--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -132,14 +132,18 @@
 			&--active{
 				color: $la_salle_green;
 
-				hr{
-					width: 50%;
-					margin: auto;
-					margin-top: 10px;
-					height: 1px;
-					background-color: $mikado_yellow;
-					border: none;
-					
+				&__form{
+					@include flex-center-center;
+					gap: 5px;
+					padding-top: 5px;
+					opacity: 0;
+
+					&__circle{
+						width: 5px;
+						height: 5px;
+						border-radius: 100%;
+						background-color: $mikado_yellow;
+					}
 				}
 			}
 
