--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,12 @@
 @import 'components/galeria/products';
 @import 'components/galeria/catalog';
 
+//*Services
+@import 'components/servicios/hero';
+@import 'components/servicios/offer';
+@import 'components/servicios/renewable';
+
+
 
 *{
 	margin: 0;
