--- a/scss/components/galeria/_catalog.scss
+++ b/scss/components/galeria/_catalog.scss
@@ -24,6 +24,7 @@
         text-align: center;
         text-transform: uppercase;
         padding-bottom: 20px;
+        margin: 0;
 
         @media(min-width:768px){
             font-size: 48px;
