--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,6 +38,8 @@
 @import 'components/servicios/hero';
 @import 'components/servicios/offer';
 @import 'components/servicios/renewable';
+@import 'components/servicios/our_services';
+
 
 
 
