--- a/scss/components/servicios/_offer.scss
+++ b/scss/components/servicios/_offer.scss
@@ -3,7 +3,11 @@
 	position: relative;
 	height: 100%;
     background-color: $black;
-    padding: 20px 0;
+    padding: 30px 0 110px 0;
+
+    @media(min-width:1199px){
+        padding: 110px 0;
+    }
 
     .container-sm{
         display: grid;
