--- a/scss/components/servicios/_renewable.scss
+++ b/scss/components/servicios/_renewable.scss
@@ -3,10 +3,13 @@
 	position: relative;
 	height: 100%;
     background-color: $mikado_yellow;
+    padding: 15px;
+    margin: auto;
+    bottom: 70px;
 
-    .container-sm{
-        @include flex-center-center;
-        flex-direction: column;
+    @media(min-width:1199px){
+        bottom: 170px;
+        padding: 30px;
     }
 
     &__title_subtitle{
@@ -29,12 +32,12 @@
             letter-spacing: 0.3px;
             text-align: center;
             font-size: 15px;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             text-align: center;
 
             @media(min-width:768px){
                 font-size: 24px;
-                margin-bottom: 20px;
+                margin-bottom: 35px;
             }
         }
 
@@ -42,19 +45,40 @@
 
     &__grid{
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        gap: 30px;
+
+        @media(min-width:768px){
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media(min-width:1199px){
+            grid-template-columns: repeat(4, 1fr);
+            gap: 50px;
+        }
 
         &__item{
             @include flex-center-center;
             flex-direction: column;
 
             &__icon{
-
+                height: 120px;
             }
 
             &__text{
                 p{
-
+                    color: $black;
+                    line-height: 26px;
+                    letter-spacing: 0.3px;
+                    text-align: center;
+                    font-size: 15px;
+                    text-align: center;
+                    font-weight: bold;
+                    padding: 20px 0 0 0;
+        
+                    @media(min-width:768px){
+                        font-size: 24px;
+                    }
                 }
             }
         }
