--- a/scss/components/nosotros/_certifcation.scss
+++ b/scss/components/nosotros/_certifcation.scss
@@ -3,7 +3,7 @@
     width: 100%;
     width: 100%;
     overflow: hidden;
-    background-image: url('../img/ban-cert.jpg');
+    background-image: url('../img/us/ban-cert.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
