--- a/scss/components/home/_hero.scss
+++ b/scss/components/home/_hero.scss
@@ -49,7 +49,7 @@
         height: 100%;
 
         &--one{
-            background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/Banner.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/home/Banner.jpg');
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
@@ -125,7 +125,7 @@
         }
 
         &--two{
-            background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/Hotel.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/home/Hotel.jpg');
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
