--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,22 +23,22 @@
 @import 'components/home/sales';
 
 //*nosotros
-@import 'components/nosotros/hero';
-@import 'components/nosotros/us';
-@import 'components/nosotros/certifcation';
-@import 'components/nosotros/goal';
-@import 'components/nosotros/situation';
+@import 'components/us/hero';
+@import 'components/us/us';
+@import 'components/us/certifcation';
+@import 'components/us/goal';
+@import 'components/us/situation';
 
 //*galeria
-@import 'components/galeria/hero';
-@import 'components/galeria/products';
-@import 'components/galeria/catalog';
+@import 'components/gallery/hero';
+@import 'components/gallery/products';
+@import 'components/gallery/catalog';
 
 //*Services
-@import 'components/servicios/hero';
-@import 'components/servicios/offer';
-@import 'components/servicios/renewable';
-@import 'components/servicios/our_services';
+@import 'components/services/hero';
+@import 'components/services/offer';
+@import 'components/services/renewable';
+@import 'components/services/our_services';
 
 
 
