--- a/scss/components/home/_our_products.scss
+++ b/scss/components/home/_our_products.scss
@@ -2,7 +2,7 @@
     width: 100%;
 	position: relative;
     overflow: hidden;
-    background-image: url("../img/fondo.jpg");
+    background-image: url("../img/home/fondo.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
