--- a/scss/components/services/_our_services.scss
+++ b/scss/components/services/_our_services.scss
@@ -21,7 +21,6 @@
     &__fotovoltaico{
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        gap: 50px;
 
         @media(min-width:1199px){
             grid-template-columns: repeat(2, 1fr);
@@ -36,9 +35,10 @@
             }
 
             @media(min-width:1400px){
-                width: 55%;
+                width: 70%;
                 margin-right: 0;
             }
+
 
 
             h1{
@@ -81,7 +81,81 @@
             height: 100%;
 
             @media(min-width: 1999px){
-                height: 70%;
+                height: 100%;
+            }
+        }
+
+            
+    }
+
+     &__residencial{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        position: relative;
+        bottom: 40px;
+
+        @media(min-width:1199px){
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        &__text{
+            width: 70%;
+            margin-left: 0;
+            margin-top: auto;
+            margin-bottom: auto;
+
+            h1{
+                color: #1b8233;
+                font-weight: 900;
+                font-size: 20px;
+                margin-bottom: 15px;
+        
+                @media(min-width:768px){
+                    font-size: 30px;
+                    margin-bottom: 30px;
+                }
+            }
+    
+            p{
+                color: $black;
+                font-weight: regular;
+                font-size: 17px;
+                line-height: 25px;
+
+                @media(min-width:768px){
+                    font-size: 24px;
+                    line-height: 30px;
+                }
+            }
+
+            h2{
+                font-size: 17px;
+                color: $black;
+                font-weight: bold;
+
+                @media(min-width:768px){
+                    font-size: 24px;
+                }
+            }
+        }
+
+        &__imagen{
+            width: 100%;
+            height: 100%;
+
+            @media(min-width:1199px){
+                width: 100%;
+                margin-right: 0;
+            }
+
+            @media(min-width:1400px){
+                width: 100%;
+                margin-right: 0;
+            }
+
+
+            @media(min-width: 1999px){
+                height: 100%;
             }
         }
 
